--- a/src/main/webapp/restrita/caixa/RetiradaPesquisa.xhtml
+++ b/src/main/webapp/restrita/caixa/RetiradaPesquisa.xhtml
@@ -24,6 +24,10 @@
 					<p:commandLink id="lnkPesquisar" update="@form" action="#{retiradaBeanPesquisa.pesquisar}">
 						<i class="fa fa-fw fa-search"></i><span>Pesquisar</span>
 					</p:commandLink>
+					<p:link outcome="/restrita/caixa/Retirada">
+						<i class="fa fa-fw fa-plus"></i>
+						<span>Novo</span>
+					</p:link>
 	    		</p:outputPanel>
 	    		
 	    	</p:panelGrid>
