--- a/src/main/webapp/restrita/paciente/Paciente.xhtml
+++ b/src/main/webapp/restrita/paciente/Paciente.xhtml
@@ -32,7 +32,7 @@
 	    		<p:inputMask id="nrCPF" mask="999.999.999-99" value="#{pacienteBean.paciente.nrCPF}" />
 	    				
 	    		<p:outputLabel value="Telefone" for="dsFone"/>
-	    		<p:inputMask id="dsFone" mask="(99) 9999-9999?9" value="#{pacienteBean.paciente.dsFone}" />
+	    		<p:inputMask id="dsFone" mask="(99) 99999999?9" value="#{pacienteBean.paciente.dsFone}" />
 	    				
 	    		<p:outputLabel value="Endereço" for="dsEndereco"/>
 	    		<p:inputText id="dsEndereco" maxlength="100" value="#{pacienteBean.paciente.dsEndereco}"/>
